tests/reference/asr-matrix_matmul_06-d802f54.stderr
semantic error: matmul provided with two arrays, each of rank 1.
 --> tests/errors/matrix_matmul_06.f90:5:14
  |
5 |     print *, matmul(a, b)
  |              ^^^^^^^^^^^^ 
